--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ name: Build
 
 on:
     push:
-        branches: [main]
+        branches: [master]
 
 jobs:
     build-to-deploy:
@@ -31,7 +31,7 @@ jobs:
               uses: nwtgck/actions-netlify@v1.1
               with:
                   publish-dir: './build'
-                  production-branch: main
+                  production-branch: master
                   github-token: ${{ secrets.GITHUB_TOKEN }}
                   deploy-message: 'Deploy from GitHub Actions'
                   enable-pull-request-comment: false
