--- a/package.json
+++ b/package.json
@@ -8,10 +8,15 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.1",
     "bootstrap": "^5.1.3",
+    "d3": "^7.4.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-flow-renderer": "^10.2.1",
+    "react-graph-vis": "^1.0.7",
+    "react-native-web": "^0.17.7",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-vis-network-graph": "^3.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
